apps/inbox/overlays/production/deployment-patch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: inbox
spec:
  replicas: 3
  template:
    spec:
      containers:
      - name: inbox
        image: quicklookup/inbox:v1.0.11
