apps/inbox/overlays/production/replicas-patch.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: inbox
spec:
  replicas: 0
