apps/inbox/overlays/production/inbox-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: inbox
spec:
  rules:
    - host: inbox.contextsuite.com
      http:
        paths:
          - backend:
              service:
                name: inbox
                port:
                  number: 9090
            path: /
            pathType: Prefix
  tls:
    - hosts:
        - inbox.contextsuite.com
      secretName: star-contextsuite-com
